<resources>
    <string name="app_name">Cow Counter</string>
    <string name="action_settings">Settings</string>
    <string name="textview1String">TextView</string>
    <string name="textview2String">TextView</string>
    <string name="addButtonString">ADD</string>
    <string name="rejButtonString">REJ</string>
    <string name="clearButtonString">CLEAR</string>
    <string name="CowNumberString">TextView</string>
</resources>
