<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="89dp"
        android:layout_height="29dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="553dp"
        android:text="@string/textview1String"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Breed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="553dp"
        android:text="@string/textview2String"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="ID" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="482dp"
        android:text="@string/addButtonString"
        android:textColor="#1A421A"
        android:textColorHighlight="#3A6D21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="482dp"
        android:text="@string/rejButtonString"
        android:textColor="#9C0404"
        android:textColorHighlight="#7E1313"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="114dp"
        android:text="@string/clearButtonString"
        android:textColor="#6429D1"
        android:textColorHighlight="#622AB6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="33dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="18dp"
        android:text="@string/CowNumberString"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cows : " />

</androidx.constraintlayout.widget.ConstraintLayout>